Refactor books layout in books.html to implement a responsive grid system and enhance styling for book cards. Update styles in styles.css to improve presentation and ensure mobile compatibility for book content, including descriptions and tags.

--- a/books.html
+++ b/books.html
@@ -55,41 +55,39 @@
             <li aria-current="page">Books</li>
           </ol>
         </nav>
-        <div class="cards" style="grid-template-columns: repeat(2, 1fr);">
-          <article class="card" style="display: flex; gap: 16px; align-items: flex-start; min-height: 300px;">
-            <div
-              style="flex-shrink: 0; width: 120px; height: 160px; background: var(--elev-2); border: 2px dashed var(--border); border-radius: 10px; display: flex; align-items: center; justify-content: center; color: var(--muted);">
+        <div class="cards books-grid">
+          <article class="card book-card">
+            <div class="book-placeholder">
               <span style="font-size: 24px;">📖</span>
             </div>
-            <div style="flex: 1;">
-              <div class="card-head" style="margin: 0;">
-                <h3 style="margin: 0;">NA (2026)</h3>
-                <div style="margin: 6px 0; display: flex; gap: 6px; flex-wrap: wrap;">
+            <div class="book-content">
+              <div class="card-head">
+                <h3>NA (2026)</h3>
+                <div class="book-tags">
                   <span class="tag">Coming Soon</span>
                 </div>
               </div>
-              <p style="margin: 10px 0 0; color: var(--muted); font-size: 14px; line-height: 1.5;">
+              <p class="book-description">
                 Stay tuned for more details about this upcoming release planned for 2026.
               </p>
             </div>
           </article>
-          <article class="card" style="display: flex; gap: 16px; align-items: flex-start; min-height: 300px;">
-            <a class="book-link" href="https://amzn.in/d/h9BcNKE" target="_blank" rel="noopener"
-              style="flex-shrink: 0;">
+          <article class="card book-card">
+            <a class="book-link book-cover-link" href="https://amzn.in/d/h9BcNKE" target="_blank" rel="noopener">
               <img class="book-cover" src="media/books/Kaali_Gobinda_Nandi.jpg" alt="Kaali book cover" loading="lazy"
-                decoding="async" style="width: 120px; height: auto;">
+                decoding="async">
             </a>
-            <div style="flex: 1;">
-              <div class="card-head" style="margin: 0;">
+            <div class="book-content">
+              <div class="card-head">
                 <h3><a class="book-link" href="https://amzn.in/d/h9BcNKE" target="_blank" rel="noopener">Kaali
                     (2023)</a></h3>
-                <div style="margin: 6px 0; display: flex; gap: 6px; flex-wrap: wrap;">
+                <div class="book-tags">
                   <span class="tag">Fiction</span>
                   <span class="tag">Violent</span>
                   <span class="tag">Action</span>
                 </div>
               </div>
-              <p style="margin: 10px 0 0; color: var(--muted); font-size: 14px; line-height: 1.5;">
+              <p class="book-description">
                 Psychopaths are often difficult to spot as they can blend in with society so easily due to their lack of
                 emotions and guilt. This tendency can lead to dangerous situations, and individuals who start
                 representing God may pose particular risks. It's important to be aware of the dangers posed by
@@ -97,22 +95,21 @@
               </p>
             </div>
           </article>
-          <article class="card" style="display: flex; gap: 16px; align-items: flex-start; min-height: 300px;">
-            <a class="book-link" href="https://amzn.in/d/dDJOzSb" target="_blank" rel="noopener"
-              style="flex-shrink: 0;">
+          <article class="card book-card">
+            <a class="book-link book-cover-link" href="https://amzn.in/d/dDJOzSb" target="_blank" rel="noopener">
               <img class="book-cover" src="media/books/I_am_Sorry_Gobinda Nandi.jpg" alt="I am Sorry book cover"
-                loading="lazy" decoding="async" style="width: 120px; height: auto;">
+                loading="lazy" decoding="async">
             </a>
-            <div style="flex: 1;">
-              <div class="card-head" style="margin: 0;">
+            <div class="book-content">
+              <div class="card-head">
                 <h3><a class="book-link" href="https://amzn.in/d/dDJOzSb" target="_blank" rel="noopener">I am Sorry
                     (2018)</a></h3>
-                <div style="margin: 6px 0; display: flex; gap: 6px; flex-wrap: wrap;">
+                <div class="book-tags">
                   <span class="tag">Fiction</span>
                   <span class="tag">Thriller</span>
                 </div>
               </div>
-              <p style="margin: 10px 0 0; color: var(--muted); font-size: 14px; line-height: 1.5;">
+              <p class="book-description">
                 The city of sin was in decline on a stormy and dark evening as news channels became politicized and
                 police prepared their weapons. A live video was being streamed on all major social media platforms, and
                 the entire country was watching as a potential massacre unfolded. The video showed only a single person
