Refactor blogs and misc sections in blogs.html and misc.html to implement responsive grid layouts for blog and extension cards. Enhance styling and content presentation, including new classes for better organization and mobile compatibility. Update styles in styles.css to support the new layouts and improve overall visual appeal.

--- a/blogs.html
+++ b/blogs.html
@@ -55,41 +55,41 @@
             <li aria-current="page">Blogs</li>
           </ol>
         </nav>
-        <div class="cards" style="grid-template-columns:1fr;">
-          <article class="card">
+        <div class="cards blogs-grid">
+          <article class="card blog-card">
             <div class="card-head">
               <h3><a class="book-link"
                   href="https://igobinda.medium.com/dos-denial-of-service-ddos-distributed-denial-of-service-cdd12edaa149"
                   target="_blank" rel="noopener">DoS (Denial of Service), DDoS (Distributed Denial of Service)</a></h3>
               <span class="tag">Medium</span>
             </div>
-            <p style="margin:0;color:var(--muted);">
+            <p class="blog-meta">
               <img src="https://www.google.com/s2/favicons?sz=64&domain=medium.com" alt="Medium"
-                style="width:16px;height:16px;vertical-align:-3px;margin-right:6px;">Jun 30, 2025 · 10 min read
+                class="blog-favicon">Jun 30, 2025 · 10 min read
             </p>
-            <p style="margin:10px 0 0; color:var(--muted);">A clear overview of DoS/DDoS attacks, types, impact, and a
+            <p class="blog-description">A clear overview of DoS/DDoS attacks, types, impact, and a
               contained lab demo showing how a SYN flood overwhelms a server.</p>
-            <div class="cta" style="margin-top:10px;">
+            <div class="cta">
               <a class="btn primary"
                 href="https://igobinda.medium.com/dos-denial-of-service-ddos-distributed-denial-of-service-cdd12edaa149"
                 target="_blank" rel="noopener">Read on Medium</a>
             </div>
           </article>
 
-          <article class="card">
+          <article class="card blog-card">
             <div class="card-head">
               <h3><a class="book-link"
                   href="https://igobinda.medium.com/php-code-documentation-and-refactoring-88ba6a8424c2" target="_blank"
                   rel="noopener">PHP Code documentation and Refactoring</a></h3>
               <span class="tag">Medium</span>
             </div>
-            <p style="margin:0;color:var(--muted);">
+            <p class="blog-meta">
               <img src="https://www.google.com/s2/favicons?sz=64&domain=medium.com" alt="Medium"
-                style="width:16px;height:16px;vertical-align:-3px;margin-right:6px;">Feb 20, 2025 · 8 min read
+                class="blog-favicon">Feb 20, 2025 · 8 min read
             </p>
-            <p style="margin:10px 0 0; color:var(--muted);">Why PHPDoc and thoughtful refactoring improve readability,
+            <p class="blog-description">Why PHPDoc and thoughtful refactoring improve readability,
               maintenance, and documentation quality—plus examples of breaking down large functions.</p>
-            <div class="cta" style="margin-top:10px;">
+            <div class="cta">
               <a class="btn primary"
                 href="https://igobinda.medium.com/php-code-documentation-and-refactoring-88ba6a8424c2" target="_blank"
                 rel="noopener">Read on Medium</a>
