--- a/misc.html
+++ b/misc.html
@@ -56,69 +56,69 @@
           </ol>
         </nav>
         <h2 class="section-title">Extensions & Plugins</h2>
-        <div class="cards">
-          <article class="card">
-            <div class="app-row">
-              <div class="app-head">
-                <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Microsoft icon"
-                  loading="lazy" decoding="async">
-                <div>
-                  <h3 style="margin:0;">
-                    <a class="book-link" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate"
-                      target="_blank" rel="noopener">DocuMate</a>
-                  </h3>
-                  <span class="tag">VS Code Extension</span>
+        <div class="cards extensions-grid">
+          <article class="card misc-card">
+            <div class="misc-content">
+              <div class="app-row">
+                <div class="app-head">
+                  <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Microsoft icon"
+                    loading="lazy" decoding="async">
+                  <div>
+                    <h3 style="text-align: left;">
+                      <a class="book-link" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate"
+                        target="_blank" rel="noopener" style="text-align: left; display: inline-block;">DocuMate</a>
+                    </h3>
+                    <span class="tag">VS Code Extension</span>
+                  </div>
                 </div>
-              </div>
-              <img class="app-icon-lg" src="media/extension/DocuMate_logo.png" alt="DocuMate extension logo"
+                <img class="app-icon-lg" src="media/extension/DocuMate_logo.png" alt="DocuMate extension logo"
                 loading="lazy" decoding="async">
+              </div>
+              <p class="misc-description">
+                A powerful VS Code extension designed to automate and streamline code documentation for PHP and
+                JavaScript. Generates class, method, and property documentation comments with customizable author details,
+                versioning, and copyright information.
+              </p>
+              <p class="misc-release-info">Released on March 22, 2025</p>
+              <div class="cta">
+                <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate"
+                  target="_blank" rel="noopener">View on VS Code Marketplace</a>
+              </div>
             </div>
-            <p style="margin:10px 0 0; color:var(--muted);">
-              A powerful VS Code extension designed to automate and streamline code documentation for PHP and
-              JavaScript. Generates class, method, and property documentation comments with customizable author details,
-              versioning, and copyright information.
-            </p>
-            <p style="margin:4px 0 0; color:var(--muted); font-size:13px;">Released on March 22, 2025</p>
-            <div class="cta" style="margin-top:10px;">
-              <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate"
-                target="_blank" rel="noopener">View on VS Code Marketplace</a>
-            </div>
+           
           </article>
         </div>
         <br>
         <h2 class="section-title">Game</h2>
-        <div class="cards" style="grid-template-columns: 1fr;">
-          <article class="card">
-            <div style="display: flex; gap: 20px; align-items: flex-start;">
-              <div style="flex: 1;">
-                <div class="app-row">
-                  <div class="app-head">
-                    <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Windows icon" loading="lazy"
-                      decoding="async">
-                    <div>
-                      <h3 style="margin:0;">
-                        <a class="book-link" href="https://github.com/inandi/sudoku-windows" target="_blank"
-                          rel="noopener">Sudoku for Windows</a>
-                      </h3>
-                      <span class="tag">Windows Game</span>
-                    </div>
+        <div class="cards game-grid">
+          <article class="card misc-card">
+            <div class="misc-content">
+              <div class="app-row">
+                <div class="app-head">
+                  <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Windows icon" loading="lazy"
+                    decoding="async">
+                  <div>
+                    <h3>
+                      <a class="book-link" href="https://github.com/inandi/sudoku-windows" target="_blank"
+                        rel="noopener">Sudoku for Windows</a>
+                    </h3>
+                    <span class="tag">Windows Game</span>
                   </div>
                 </div>
-                <p style="margin:10px 0 0; color:var(--muted);">
-                  A classic Sudoku game for Windows, originally developed in 2010 using Visual Basic 6. Features multiple
-                  difficulty levels, a clean and intuitive interface, and instant validation of moves. Designed for offline
-                  play with a focus on performance and simplicity.
-                </p>
-                <p style="margin:4px 0 0; color:var(--muted); font-size:13px;">
-                  Open source &mdash; <a href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">View
-                    on GitHub</a>
-                </p>
               </div>
-              <div style="flex-shrink: 0;">
-                <img src="media/apps/soduko.jpg" alt="Sudoku for Windows screenshot" 
-                     style="width: 200px; height: auto; border-radius: 8px; border: 1px solid var(--border);" 
-                     loading="lazy" decoding="async">
-              </div>
+              <p class="misc-description">
+                A classic Sudoku game for Windows, originally developed in 2010 using Visual Basic 6. Features multiple
+                difficulty levels, a clean and intuitive interface, and instant validation of moves. Designed for offline
+                play with a focus on performance and simplicity.
+              </p>
+              <p class="misc-release-info">
+                Open source &mdash; <a href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">View
+                  on GitHub</a>
+              </p>
+            </div>
+            <div class="misc-media">
+              <img src="media/apps/soduko.jpg" alt="Sudoku for Windows screenshot" 
+                   class="game-screenshot" loading="lazy" decoding="async">
             </div>
           </article>
         </div>
